[package]
name = "ecsctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-ecs = "1.68.0"
clap = { version = "4.5.31", features = ["derive"]}
comfy-table = "7.1.4"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "process", "signal"] }
